add ted talk + events section

--- a/_layouts/base.html
+++ b/_layouts/base.html
@@ -5,15 +5,11 @@
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
         <meta http-equiv="x-ua-compatible" content="ie=edge">
         <meta name="description" content="The DIRAC Institute: Data Intensive Research in Astrophysics and Cosmology"/>
-        <meta name="keywords" content="DIRAC,Data,Intensive,Research,Astronomy,Astrophysics,Cosmology,LSST,UW,University,Washington"/>
+        <meta name="keywords" content="DIRAC,Data,Intensive,Research,Science,Astronomy,Astrophysics,Cosmology,LSST,UW,University,Washington"/>
         <!-- <link rel="icon" href="{{ site.baseurl }}/img/favicon.png"> -->
         <title>{{ page.title }}</title>
         <link rel="stylesheet" href="https://cdn.jsdelivr.net/figuration/2.0.0/css/figuration.min.css" integrity="sha384-4NEYqGqlkFmjCXappSYTanA6sCbHfuAbTw0y9/n3iEx6JVK5TzYEVyQWroUSR3vo" crossorigin="anonymous">
-        <!-- <link href='https://fonts.googleapis.com/css?family=Raleway:400,300,700,300italic,400italic' rel='stylesheet' type='text/css'>
-        <link href="{{ site.baseurl }}/css/normalize.css" rel="stylesheet">
-        <link href="{{ site.baseurl }}/css/skeleton.css" rel="stylesheet">
-        <link href="{{ site.baseurl }}/css/custom.css" rel="stylesheet">
-        <link href="{{ site.baseurl }}/font-awesome/css/font-awesome.min.css" rel="stylesheet"> -->
+        <link rel="stylesheet" href="{{site.baseurl}}/css/custom.css">
     </head>
     <body>
 
