--- a/_layouts/base.html
+++ b/_layouts/base.html
@@ -6,7 +6,7 @@
         <meta http-equiv="x-ua-compatible" content="ie=edge">
         <meta name="description" content="The DIRAC Institute: Data Intensive Research in Astrophysics and Cosmology"/>
         <meta name="keywords" content="DIRAC,Data,Intensive,Research,Science,Astronomy,Astrophysics,Cosmology,LSST,UW,University,Washington"/>
-        <!-- <link rel="icon" href="{{ site.baseurl }}/img/favicon.png"> -->
+        <link rel="icon" href="{{ site.baseurl }}/img/logo_circle.png">
         <title>{{ page.title }}</title>
         <link rel="stylesheet" href="https://cdn.jsdelivr.net/figuration/2.0.0/css/figuration.min.css" integrity="sha384-4NEYqGqlkFmjCXappSYTanA6sCbHfuAbTw0y9/n3iEx6JVK5TzYEVyQWroUSR3vo" crossorigin="anonymous">
         <link rel="stylesheet" href="{{site.baseurl}}/css/custom.css">
