--- a/css/custom.css
+++ b/css/custom.css
@@ -5,6 +5,13 @@ section, .container, .row {
 section {
     border-bottom:1px solid #ccc;
 }
+.img-nav {
+    position:fixed;
+    top:2px;
+    left:6px;
+    height:50px;
+    z-index:10000;
+}
 #about {
     margin-top:-3em;
 }
