new event scraping

--- a/_includes/events.html
+++ b/_includes/events.html
@@ -18,7 +18,10 @@
 
 
 							<br></small></h6><p><a class="btn btn-sm" role="button" href="https://depts.washington.edu/astron/event/the-james-webb-space-telescope/" alt="JWST is Coming to a Lagrangian Point Near You!">Find out more</a></p></li>
-<li><h6>Stellar Tidal Disruption: what can we learn and what have we learned<br><small class="text-info">May 25 @ 4:00 PM<br>
+</ul>
+</div>
+<div class="col-md-6">
+<ul><li><h6>Stellar Tidal Disruption: what can we learn and what have we learned<br><small class="text-info">May 25 @ 4:00 PM<br>
 				Physics/Astro Auditorium, 
 
 
@@ -28,3 +31,13 @@
 
 
 							<br></small></h6><p><a class="btn btn-sm" role="button" href="https://depts.washington.edu/astron/event/stellar-tidal-disruption-what-can-we-learn-and-what-have-we-learned/" alt="Stellar Tidal Disruption: what can we learn and what have we learned">Find out more</a></p></li>
+<li><h6>Origins of Structure in Planetary Systems<br><small class="text-info">June 1 @ 4:00 PM<br>
+				Physics/Astro Auditorium, 
+
+
+
+
+
+
+
+							<br></small></h6><p><a class="btn btn-sm" role="button" href="https://depts.washington.edu/astron/event/planet-origins/" alt="Origins of Structure in Planetary Systems">Find out more</a></p></li>
